--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,6 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -12,8 +15,7 @@
  *
  *= require_tree .
  *= require_self
- */@import "bootstrap-sprockets";
-@import "bootstrap";
+ */
 
 .abc{
 	width: 95;
