--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,3 @@
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
    <nav class="navbar navbar-default ">
    <div class="container header_tag ">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -69,16 +59,14 @@
 
         <ul class="navbar-header pull-right  " >
 
-          
         <% if user_signed_in? %>
-        <button  class="btn btn-alert button">
-        <%=link_to "Sign Out",destroy_user_session_path,method: :delete %>
-        </button>
+            <%=link_to "Sign Out",destroy_user_session_path,method: :delete %>
         <%else %>
-              
-        <button  class="btn btn-alert button"><%= link_to "Sign Up", new_user_registration_path %></button>
-        <button  class="btn btn-alert"><%= link_to "Login",new_user_session_path%></button>
+
+          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-alert' %>
+          <%= link_to "Login", new_user_session_path, class: 'btn btn-alert' %>
         <%end %>
+          
       </ul>
       <div class="navbar-header pull-right">
          <%= form_tag search_books_path, method: :get,role:"search" do %>
