--- a/app/views/layouts/_index_header.html.erb
+++ b/app/views/layouts/_index_header.html.erb
@@ -1,15 +1,5 @@
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
-   <nav class="navbar navbar-default  ">
-   <div class="container header_tag ">
+<nav class="navbar navbar-default  ">
+  <div class="container header_tag ">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header pull-left ">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#category-dropdown" aria-expanded="false">
@@ -19,72 +9,70 @@
         <span class="icon-bar"></span>
       </button>
       <div class="col-xs-2 col-md-2">
-      <a class="navbar-brand " href="#"><%= link_to "BestBooksEver", '/' %></a>
+        <a class="navbar-brand " href="#"><%= link_to "BestBooksEver", '/' %></a>
       </div>
     </div>
     <div class="col-xs-1 col-md-1">
-        <a href="#"><%= link_to "Home", '/' %> <span class="sr-only"></span></a>
-        </div>
-        <div class="col-xs-1 col-md-1">
-        <a href="#"><%= link_to "Dashboard", '/dashboard' %> <span class="sr-only"></span></a>
-        </div>
+      <a href="#"><%= link_to "Home", '/' %> <span class="sr-only"></span></a>
+    </div>
+    <div class="col-xs-1 col-md-1">
+      <a href="#"><%= link_to "Dashboard", '/dashboard' %> <span class="sr-only"></span></a>
+    </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="category-dropdown">
       <ul class="nav navbar-nav">
 
-         
+
 
         <div class="col-xs-1 col-md-1">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-          <li >
-            <% Category.all.each do |category| %>
-               <%= link_to category.name, books_path(category: category.name) %>
-               <% end  %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li >
+                <% Category.all.each do |category| %>
+                  <%= link_to category.name, books_path(category: category.name) %>
+                <% end  %>
               </li>
-          </ul>
-        </li>
+            </ul>
+          </li>
         </div>
       </ul>
-        <div class="col-xs-1 col-md-1">
+      <div class="col-xs-1 col-md-1">
 
         <ul class="nav navbar-nav">
-        
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recommended By <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Elon Musk</a></li>
-            <li><a href="#">Peter Theil</a></li>
-            <li><a href="#">Steve Jobs</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Bill Gates</a></li>
-          </ul>
-        </li>
-        
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recommended By <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Elon Musk</a></li>
+              <li><a href="#">Peter Theil</a></li>
+              <li><a href="#">Steve Jobs</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Bill Gates</a></li>
+            </ul>
+          </li>
+
         </ul>
-        </div>
-      
-        
-         
-        <ul class="navbar-header pull-right sign_in " >
+      </div>
+
+
+
+      <ul class="navbar-header pull-right sign_in " >
         <% if user_signed_in? %>
-        <button  class="btn btn-alert">
-        <%=link_to "Sign Out",destroy_user_session_path,method: :delete %>
-        </button>
+            <%=link_to "Sign Out",destroy_user_session_path,method: :delete %>
         <%else %>
-              
-        <button  class="btn btn-alert"><%= link_to "Sign Up", new_user_registration_path %></button>
-        <button  class="btn btn-alert"><%= link_to "Login",new_user_session_path%></button>
+
+          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-alert' %>
+          <%= link_to "Login", new_user_session_path, class: 'btn btn-alert' %>
         <%end %>
       </ul>
-      
+
     </div><!-- /.navbar-collapse -->
 
   </div><!-- /.container-fluid -->
 
 
-            </div>
-        </div>
-        </div>
-    </div>
+  </div>
+  </div>
+  </div>
+  </div>
